tests/typescript/neg/simple/bool-01.ts

/*@ emp :: [number] */
var emp = [];

assert(emp === null));

